--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Node.js dependencies
 node_modules/
+*.parcel-cache
+
 
 # Build output
 build/
@@ -29,6 +31,7 @@ Thumbs.db
 # Temporary files
 *.tmp
 *.temp
+
 
 # Coverage reports
 coverage/
